# ros-code-generator

./: .gitignore  CObject.py  CheckConnections.py  FolderTreeFunctions.py  GenerateLaunchFile.py  XMLTags.py  code_generator.py  folder_tree_functions.py  global_filepath.py  internal_state_base.schema.json  log.py  main.py  prototype_changer.py  toolchain.py
asn1tools/: parser.py
cmakelist/: CMakeList.py
cmakelists/: CMakeLists.py
comments/: Comment.py
constants/: Constant.py
datatypes/: Datatype.py  DatatypeConversion.py  DatatypeFromASN1.py  DatatypeFromPort.py  Geometry_Msgs.py  Std_Msgs.py  Type.py
includes/: Include.py  NodeConfiguration.py  SourceTextFile.py  SourceTextFunction.py
launchfile/: LaunchFile.py  LaunchFileFunctionSupport.py  Node.py  Remap.py
libraries/: Geometry_Msgs.py  Library.py  Std_Msgs.py
messages/: CustomMessage.py  Message.py  MessageFunctionSupport.py
methods/: Constructor.py  ErrorHandling.py  Main.py  Method.py  NodeSigintHandler.py  Prepare.py  TearDown.py
package/: PackageXML.py
service/: Service.py  ServiceFunctionSupport.py
services/: Service.py  ServiceFunctionSupport.py
src/: Listener_Node.cpp  Talk_List_Node.cpp  Talker_Node.cpp  Talker_Node_2.cpp  Talker_Node_B.cpp  container2_tlk_lis.launch  dentro_il_container_impl.launch  listener_node.cpp  talker_node.cpp  talker_node_A.cpp  talker_node_B.cpp
src/client_server_example/: CMakeLists.txt  package.xml
src/client_server_example/include/client_server_example/: Publisher_configuration.h  Server_Node_configuration.h  Talk_List_Node_configuration.h  prepare_pub.h  publisher.h  service_source.h  subscriber.h  talk_list.h
src/client_server_example/launch/: container.impl.launch
src/client_server_example/msg/: Complex.msg
src/client_server_example/src/: Client.cpp  Publisher.cpp  Publisher_2.cpp  Server_Node.cpp  Talk_List_Node.cpp
src/client_server_example/srv/: Custom_Service.srv
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Complex.msg
src/custom_srvs/: CMakeLists.txt  package.xml
src/custom_srvs/srv/: ServiceA.srv
src/example_node/: CMakeList.txt  CMakeLists.txt  package.xml
src/example_node/src/: Listener_Node.cpp  Listener_Node_Cus.cpp  Talk_List_Node.cpp  Talker_Node.cpp  Talker_Node_B.cpp
src/example_node_system_of_system/: CMakeList.txt  package.xml
src/example_node_system_of_system/launch/: container2.tlk_lis.launch
src/example_node_system_of_system/src/: Talker_Node_C.cpp
src/planners/: CMakeLists.txt  package.xml
src/planners/include/planners/: Dwa_Planner_configuration.h  Sbpl_Planner_configuration.h  costmap_utils.h  dwa_planner.h  global_planner_utils.h  save_path.h  sbpl_planner.h
src/planners/src/: Dwa_Planner.cpp  Sbpl_Planner.cpp
structs/: ParametersStruct.py  Struct.py  VariablesStruct.py
systems/: System.py  SystemsManager.py
template/threads/: Publisher.cpp  Subscriber.cpp
threads/: AADLProcess.py  AADLThread.py  AADLThreadFunctionsSupport.py  Generic.py  MainThread.py  Publisher.py  ServiceClient.py  ServiceServer.py  Subscriber.py  SubscriberPublisher.py  Timer.py  Variable.py
variables/: Std_String.py  Variable.py
