<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>client_server_example</name>
  <version>0.0.0</version>
  <description>The client_server_example package</description>
  <maintainer email="email@example.org">Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>client_server_example</build_depend>
  <build_depend>ros_base</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>client_server_example</run_depend>
  <run_depend>ros_base</run_depend>
</package>
