<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>client_server_example</name>
  <version>0.0.0</version>
  <description>The client_server_example package</description>
  <maintainer email="email@example.org">Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>custom_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_base</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>custom_srvs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ros_base</run_depend>
  <run_depend>custom_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
