<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>The custom_msgs package</description>
  <maintainer email="email@example.org">Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
