<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>planners</name>
  <version>0.0.0</version>
  <description>The planners package</description>
  <maintainer email="email@example.org">Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_base</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>ros_base</run_depend>
  <run_depend>map_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
